feat: 新增秒杀模块并重构基础架构
- 新增秒杀全套业务：Lua库存脚本、限流脚本、实体/Mapper/DTO/VO
- 实现动态数据源读写分离，支持@ReadOnly自动切换读写库
- 重构用户认证体系，替换旧UserContext为Spring Security+JWT方案
- 优化现有代码：添加参数校验、简化集合操作、补充逻辑删除字段
- 新增BaseController、RocketMQ配置、测试环境等基础设施
- 清理过时的旧配置类与工具类