@@ -3,6 +3,7 @@ package com.xytgy.teamallbackend.module.chat.service.impl;
 import com.baomidou.mybatisplus.core.conditions.query.QueryWrapper;
 import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
 import com.baomidou.mybatisplus.extension.service.impl.ServiceImpl;
+import com.baomidou.mybatisplus.extension.toolkit.ChainWrappers;
 import com.xytgy.teamallbackend.module.chat.entity.ChatMessage;
 import com.xytgy.teamallbackend.module.chat.entity.ChatSession;
 import com.xytgy.teamallbackend.module.chat.repository.ChatMessageMapper;
@@ -10,16 +11,22 @@ import com.xytgy.teamallbackend.module.chat.repository.ChatSessionMapper;
 import com.xytgy.teamallbackend.module.chat.service.ChatService;
 import com.xytgy.teamallbackend.module.chat.vo.ChatMessageVO;
 import com.xytgy.teamallbackend.module.chat.vo.ChatSessionVO;
+import com.xytgy.teamallbackend.config.datasource.ReadOnly;
 import com.xytgy.teamallbackend.module.user.entity.User;
 import com.xytgy.teamallbackend.module.shop.service.ShopService;
 import com.xytgy.teamallbackend.module.user.repository.UserMapper;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
+import java.util.Set;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 
 @Service
@@ -35,9 +42,10 @@ public class ChatServiceImpl extends ServiceImpl<ChatMessageMapper, ChatMessage>
     private final ShopService shopService;
 
     private ChatSession getOrCreateSession(Long buyerId, Long merchantId) {
-        QueryWrapper<ChatSession> qw = new QueryWrapper<>();
-        qw.eq("buyer_id", buyerId).eq("merchant_id", merchantId);
-        ChatSession session = chatSessionMapper.selectOne(qw);
+        ChatSession session = ChainWrappers.lambdaQueryChain(chatSessionMapper)
+                .eq(ChatSession::getBuyerId, buyerId)
+                .eq(ChatSession::getMerchantId, merchantId)
+                .one();
         if (session == null) {
             session = new ChatSession();
             session.setBuyerId(buyerId);
@@ -48,46 +56,41 @@ public class ChatServiceImpl extends ServiceImpl<ChatMessageMapper, ChatMessage>
         return session;
     }
 
+
+
+
+    @ReadOnly
     @Override
     public List<ChatMessageVO> listMessages(Long buyerId, Long merchantId, Integer page, Integer size) {
         ChatSession session = getOrCreateSession(buyerId, merchantId);
+        Page<ChatMessage> chatPage = this.lambdaQuery()
+                .eq(ChatMessage::getSessionId, session.getId())
+                .orderByDesc(ChatMessage::getCreateTime)
+                .page(new Page<>(page != null ? page : 1, size != null ? size : 20));
 
-        Page<ChatMessage> pageParam = new Page<>(page != null ? page : 1, size != null ? size : 20);
-        QueryWrapper<ChatMessage> queryWrapper = new QueryWrapper<>();
-        queryWrapper.eq("session_id", session.getId())
-                .orderByDesc("create_time");
-
-        Page<ChatMessage> chatPage = this.page(pageParam, queryWrapper);
-
-        List<ChatMessageVO> voList = chatPage.getRecords().stream().map(c -> {
-            // 【关键修复】如果消息的 senderId 属于商家的 userId，那么在返回给前端时，必须统一把它抹成 merchantId (shopId)
-            // 否则前端在拿这条消息的 senderId 跟自己的身份对比时，会发现对不上，就把气泡渲染到左边（对方）去了。
+        List<ChatMessageVO> voList = chatPage.getRecords().stream().map(c->{
             Long displaySenderId = c.getSenderId();
-            if (!displaySenderId.equals(buyerId)) { // 如果发送方不是买家，那肯定是商家
-                displaySenderId = merchantId;       // 强制把发送方 ID 显示为 shopId
+            if (!displaySenderId.equals(buyerId)) {
+                displaySenderId = merchantId;
             }
-            
             Long displayReceiverId = c.getReceiverId();
             if (!displayReceiverId.equals(buyerId)) {
                 displayReceiverId = merchantId;
             }
-
             return ChatMessageVO.builder()
-                .id(c.getId())
-                .sessionId(c.getSessionId())
-                .senderId(displaySenderId)
-                .receiverId(displayReceiverId)
-                .content(c.getContent())
-                .msgType(c.getMsgType())
-                .isRead(c.getIsRead())
-                .createTime(c.getCreateTime() != null ? c.getCreateTime().format(TIME_FORMATTER) : null)
-                .build();
-        }).collect(Collectors.toList());
-
+                    .id(c.getId())
+                    .sessionId(session.getId())
+                    .senderId(displaySenderId)
+                    .receiverId(displayReceiverId)
+                    .content(c.getContent())
+                    .msgType(c.getMsgType())
+                    .isRead(c.getIsRead())
+                    .createTime(c.getCreateTime()!= null ? c.getCreateTime().format(TIME_FORMATTER) : null)
+                    .build();
+        }).collect(Collectors.toCollection(ArrayList::new));
         Collections.reverse(voList);
         return voList;
     }
-
     @Override
     public void markAsRead(Long buyerId, Long merchantId, Long readerId) {
         ChatSession session = getOrCreateSession(buyerId, merchantId);
@@ -104,34 +107,44 @@ public class ChatServiceImpl extends ServiceImpl<ChatMessageMapper, ChatMessage>
         this.update(updateMsg, qw);
     }
 
+    @ReadOnly
     @Override
     public List<ChatSessionVO> listSessions(Long merchantId) {
         QueryWrapper<ChatSession> qw = new QueryWrapper<>();
         qw.eq("merchant_id", merchantId).orderByDesc("update_time");
         List<ChatSession> sessions = chatSessionMapper.selectList(qw);
-        
+        if (sessions.isEmpty()) {
+            return Collections.emptyList();
+        }
+
+        Set<Long> buyerIds = sessions.stream().map(ChatSession::getBuyerId).collect(Collectors.toSet());
+        Map<Long, User> buyerMap = userMapper.selectBatchIds(buyerIds).stream()
+                .collect(Collectors.toMap(User::getId, Function.identity()));
+
+        Set<Long> sessionIds = sessions.stream().map(ChatSession::getId).collect(Collectors.toSet());
+        Map<Long, Long> unreadMap = this.lambdaQuery()
+                .in(ChatMessage::getSessionId, sessionIds)
+                .eq(ChatMessage::getReceiverId, merchantId)
+                .eq(ChatMessage::getIsRead, 0)
+                .list()
+                .stream()
+                .collect(Collectors.groupingBy(ChatMessage::getSessionId, Collectors.counting()));
+
         return sessions.stream().map(s -> {
-            User buyer = userMapper.selectById(s.getBuyerId());
-            
-            // 计算未读消息数
-            QueryWrapper<ChatMessage> unreadQw = new QueryWrapper<>();
-            unreadQw.eq("session_id", s.getId())
-                    .eq("receiver_id", merchantId)
-                    .eq("is_read", 0);
-            long unreadCount = this.count(unreadQw);
-            
+            User buyer = buyerMap.get(s.getBuyerId());
             return ChatSessionVO.builder()
                     .buyerId(s.getBuyerId())
                     .buyerName(buyer != null ? (buyer.getNickname() != null ? buyer.getNickname() : buyer.getUserAccount()) : "未知用户")
                     .buyerAvatar(buyer != null ? buyer.getAvatar() : null)
                     .lastMessage(s.getLastMessage())
                     .lastTime(s.getLastTime() != null ? s.getLastTime().format(TIME_FORMATTER) : null)
-                    .unreadCount((int)unreadCount)
+                    .unreadCount(unreadMap.getOrDefault(s.getId(), 0L).intValue())
                     .build();
-        }).collect(Collectors.toList());
+        }).toList();
     }
 
     @Override
+    @Transactional(rollbackFor = Exception.class)
     public ChatMessageVO saveMessage(Long senderId, Long receiverId, String content, Integer msgType) {
         // 判断谁是buyer，谁是merchant。实际业务中可能需要查user表确定身份
         // 为简单起见，如果当前senderId是买家，则receiverId是merchant，反之亦然。
