@@ -1,6 +1,8 @@
 package com.xytgy.teamallbackend.module.favorite.service.impl;
 
+import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
 import com.baomidou.mybatisplus.extension.service.impl.ServiceImpl;
+import com.xytgy.teamallbackend.common.PageResult;
 import com.xytgy.teamallbackend.common.ResultCode;
 import com.xytgy.teamallbackend.common.mapstruct.CopyMapper;
 import com.xytgy.teamallbackend.exception.ServiceException;
@@ -11,6 +13,7 @@ import com.xytgy.teamallbackend.module.favorite.vo.FavoriteItemVO;
 import com.xytgy.teamallbackend.module.product.entity.Product;
 import com.xytgy.teamallbackend.module.product.service.ProductService;
 import lombok.RequiredArgsConstructor;
+import org.springframework.dao.DuplicateKeyException;
 import org.springframework.stereotype.Service;
 
 import java.util.Collections;
@@ -27,25 +30,25 @@ public class FavoriteServiceImpl extends ServiceImpl<FavoriteMapper, Favorite> i
     private final CopyMapper copyMapper;
 
     @Override
-    public List<FavoriteItemVO> listFavorites(Long userId) {
+    public PageResult<FavoriteItemVO> listFavorites(Long userId, int page, int pageSize) {
         if (userId == null) {
             throw new ServiceException(ResultCode.UNAUTHORIZED, "未登录");
         }
-        
-        List<Favorite> favorites = lambdaQuery()
+
+        Page<Favorite> pageResult = lambdaQuery()
                 .eq(Favorite::getUserId, userId)
                 .orderByDesc(Favorite::getCreateTime)
-                .list();
-                
-        if (favorites.isEmpty()) {
-            return Collections.emptyList();
+                .page(new Page<>(page, pageSize));
+
+        if (pageResult.getRecords().isEmpty()) {
+            return new PageResult<>(Collections.emptyList(), 0, page, pageSize);
         }
-        
-        Set<Long> productIds = favorites.stream().map(Favorite::getProductId).collect(Collectors.toSet());
+
+        Set<Long> productIds = pageResult.getRecords().stream().map(Favorite::getProductId).collect(Collectors.toSet());
         Map<Long, Product> productMap = productService.listByIds(productIds).stream()
                 .collect(Collectors.toMap(Product::getId, p -> p));
-                
-        return favorites.stream().map(f -> {
+
+        List<FavoriteItemVO> voList = pageResult.getRecords().stream().map(f -> {
             Product p = productMap.get(f.getProductId());
             FavoriteItemVO vo = new FavoriteItemVO();
             vo.setId(f.getId());
@@ -56,7 +59,9 @@ public class FavoriteServiceImpl extends ServiceImpl<FavoriteMapper, Favorite> i
                 vo.setImageUrl(p.getImageUrl());
             }
             return vo;
-        }).collect(Collectors.toList());
+        }).toList();
+
+        return new PageResult<>(voList, pageResult.getTotal(), page, pageSize);
     }
 
     @Override
@@ -65,24 +70,17 @@ public class FavoriteServiceImpl extends ServiceImpl<FavoriteMapper, Favorite> i
             throw new ServiceException(ResultCode.BAD_REQUEST, "参数错误");
         }
         
-        // 校验商品是否存在
         Product product = productService.getById(productId);
         if (product == null) {
             throw new ServiceException(ResultCode.NOT_FOUND, "商品不存在");
         }
 
-        // 检查是否已经收藏过
-        long count = lambdaQuery()
-                .eq(Favorite::getUserId, userId)
-                .eq(Favorite::getProductId, productId)
-                .count();
-        
-        if (count > 0) {
+        Favorite favorite = copyMapper.toFavorite(userId, productId);
+        try {
+            save(favorite);
+        } catch (DuplicateKeyException e) {
             throw new ServiceException(ResultCode.BAD_REQUEST, "已经收藏过了");
         }
-
-        Favorite favorite = copyMapper.toFavorite(userId, productId);
-        save(favorite);
     }
 
     @Override
