@@ -11,10 +11,13 @@ import com.alipay.api.request.AlipayTradeQueryRequest;
 import com.alipay.api.response.AlipayTradeCloseResponse;
 import com.alipay.api.response.AlipayTradeRefundResponse;
 import com.alipay.api.response.AlipayTradeQueryResponse;
+import com.baomidou.mybatisplus.extension.conditions.query.LambdaQueryChainWrapper;
+import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
 import com.baomidou.mybatisplus.extension.service.impl.ServiceImpl;
+import com.xytgy.teamallbackend.common.PageResult;
 import com.xytgy.teamallbackend.common.ResultCode;
 import com.xytgy.teamallbackend.common.mapstruct.CopyMapper;
-import com.xytgy.teamallbackend.config.AlipayConfig;
+import com.xytgy.teamallbackend.config.datasource.ReadOnly;
 import com.xytgy.teamallbackend.module.order.dto.OrderCreateRequest;
 import com.xytgy.teamallbackend.module.order.dto.OrderPayRequest;
 import com.xytgy.teamallbackend.module.order.dto.OrderReviewRequest;
@@ -34,17 +37,23 @@ import com.xytgy.teamallbackend.module.product.service.ProductService;
 import com.xytgy.teamallbackend.module.order.vo.CreateOrderVO;
 import com.xytgy.teamallbackend.module.order.vo.LogisticsVO;
 import com.xytgy.teamallbackend.module.order.vo.MerchantOrderVO;
-import com.xytgy.teamallbackend.module.order.vo.OrderItemVO;
 import com.xytgy.teamallbackend.module.order.vo.OrderVO;
 import com.xytgy.teamallbackend.module.order.vo.OrderStatsVO;
+import com.xytgy.teamallbackend.config.mq.MqConstants;
+import com.xytgy.teamallbackend.config.mq.MqProducer;
+import com.xytgy.teamallbackend.utils.DistributedLock;
 import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.ObjectProvider;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Propagation;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.util.StringUtils;
 
 import java.math.BigDecimal;
+import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.*;
+import java.util.concurrent.atomic.AtomicLong;
 import java.util.stream.Collectors;
 /**
 * @author xytgy
@@ -65,10 +74,22 @@ public class OrdersServiceImpl extends ServiceImpl<OrdersMapper, Orders>
     private final ProductReviewMapper productReviewMapper;
     
     private final PaymentRecordService paymentRecordService;
-    private final AlipayClient alipayClient;
-    private final AlipayConfig alipayConfig;
+    private final ObjectProvider<AlipayClient> alipayClientProvider;
+
+    // S6809: 自注入，通过代理调用 @Transactional 方法，避免 this 调用导致事务失效
+    private final ObjectProvider<OrdersService> selfProvider;
+    private final DistributedLock distributedLock;
+    private final MqProducer mqProducer;
 
     private static final DateTimeFormatter TIME_FORMATTER = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss");
+
+    private AlipayClient getAlipayClient() {
+        AlipayClient client = alipayClientProvider.getIfAvailable();
+        if (client == null) {
+            throw new ServiceException(ResultCode.ERROR, "支付宝未配置，无法执行该操作");
+        }
+        return client;
+    }
 
     @Override
     @Transactional(rollbackFor = Exception.class)
@@ -90,12 +111,15 @@ public class OrdersServiceImpl extends ServiceImpl<OrdersMapper, Orders>
             productQtyMap.merge(item.getProductId(), item.getQuantity(), Integer::sum);
         }
 
+        //批量查询，提高性能
         List<Product> products = productService.listByIds(productQtyMap.keySet());
         if (products.size() != productQtyMap.size()) {
             throw new ServiceException(ResultCode.NOT_FOUND, "存在无效商品");
         }
+        //空间换时间优化
         Map<Long, Product> productMap = products.stream().collect(Collectors.toMap(Product::getId, p -> p));
 
+        //避免N+1 性能问题
         BigDecimal totalAmount = BigDecimal.ZERO;
         for (Map.Entry<Long, Integer> entry : productQtyMap.entrySet()) {
             Product product = productMap.get(entry.getKey());
@@ -120,8 +144,15 @@ public class OrdersServiceImpl extends ServiceImpl<OrdersMapper, Orders>
             Product product = productMap.get(entry.getKey());
             Integer qty = entry.getValue();
 
-            product.setStock(product.getStock() - qty);
-            productService.updateById(product);
+            // 乐观锁扣减库存：WHERE stock >= qty，防止超卖
+            boolean stockUpdated = productService.lambdaUpdate()
+                    .eq(Product::getId, product.getId())
+                    .ge(Product::getStock, qty)
+                    .setSql("stock = stock - " + qty)
+                    .update();
+            if (!stockUpdated) {
+                throw new ServiceException(ResultCode.BAD_REQUEST, "库存不足: " + product.getName());
+            }
 
             OrderItem item = new OrderItem();
             item.setOrderId(order.getId());
@@ -135,9 +166,15 @@ public class OrdersServiceImpl extends ServiceImpl<OrdersMapper, Orders>
         orderItemService.saveBatch(orderItems);
         cartService.removeByUserAndProductIds(userId, new ArrayList<>(productQtyMap.keySet()));
 
+        // 下单成功后发送 30 分钟延迟消息，超时未支付自动取消
+        Map<String, Object> timeoutMsg = Map.of("orderId", order.getId(), "userId", userId);
+        mqProducer.sendDelay(MqConstants.TOPIC_ORDER_TIMEOUT, MqConstants.TAG_TIMEOUT_CANCEL,
+                String.valueOf(order.getId()), timeoutMsg, MqConstants.DELAY_LEVEL_30_MINUTES);
+
         return new CreateOrderVO(order.getOrderNo(), order.getId());
     }
 
+    @ReadOnly
     @Override
     public OrderVO getOrderDetail(Long userId, Long orderId) {
         Orders order = this.getById(orderId);
@@ -154,33 +191,37 @@ public class OrdersServiceImpl extends ServiceImpl<OrdersMapper, Orders>
         return vo;
     }
 
+    @ReadOnly
     @Override
-    public List<OrderVO> listOrders(Long userId, Integer status) {
-        var wrapper = lambdaQuery()
+    public PageResult<OrderVO> listOrders(Long userId, Integer status, int page, int pageSize) {
+        // S6213: var 是 Java 10+ 保留标识符，不能作为变量名
+        LambdaQueryChainWrapper<Orders> wrapper = lambdaQuery()
                 .eq(Orders::getUserId, userId);
-                
+
         if (status != null) {
             wrapper.eq(Orders::getStatus, status);
         }
-        
-        List<Orders> orders = wrapper.orderByDesc(Orders::getCreateTime).list();
-        if (orders.isEmpty()) {
-            return Collections.emptyList();
+
+        Page<Orders> pageResult = wrapper.orderByDesc(Orders::getCreateTime).page(new Page<>(page, pageSize));
+        if (pageResult.getRecords().isEmpty()) {
+            return new PageResult<>(Collections.emptyList(), 0, page, pageSize);
         }
 
-        List<Long> orderIds = orders.stream().map(Orders::getId).toList();
+        List<Long> orderIds = pageResult.getRecords().stream().map(Orders::getId).toList();
         Map<Long, List<OrderItem>> orderItemMap = orderItemService.lambdaQuery()
                 .in(OrderItem::getOrderId, orderIds)
                 .list()
                 .stream()
                 .collect(Collectors.groupingBy(OrderItem::getOrderId));
 
-        return orders.stream().map(order -> {
+        List<OrderVO> voList = pageResult.getRecords().stream().map(order -> {
             List<OrderItem> items = orderItemMap.getOrDefault(order.getId(), Collections.emptyList());
             OrderVO vo = copyMapper.toOrderVO(order, items);
             vo.setCreateTime(order.getCreateTime() == null ? null : order.getCreateTime().format(TIME_FORMATTER));
             return vo;
         }).toList();
+
+        return new PageResult<>(voList, pageResult.getTotal(), page, pageSize);
     }
 
     @Override
@@ -194,75 +235,94 @@ public class OrdersServiceImpl extends ServiceImpl<OrdersMapper, Orders>
     }
 
     @Override
-    @Transactional(rollbackFor = Exception.class)
     public void cancelOrder(Long userId, Long orderId) {
+        //先做检验
         Orders order = getUserOrder(userId, orderId);
         if (!Objects.equals(order.getStatus(), 0)) {
             throw new ServiceException(ResultCode.BAD_REQUEST, "仅待支付订单可取消");
         }
-        
+
+        // 远程调用放在事务外，避免占用数据库连接
         PaymentRecord payingRecord = paymentRecordService.getLastPayingRecord(order.getId());
-        if (payingRecord != null && Objects.equals(payingRecord.getStatus(), "PAYING")) {
-            try {
-                AlipayTradeQueryRequest queryRequest = new AlipayTradeQueryRequest();
-                AlipayTradeQueryModel queryModel = new AlipayTradeQueryModel();
-                queryModel.setOutTradeNo(payingRecord.getOutTradeNo());
-                queryRequest.setBizModel(queryModel);
-                
-                AlipayTradeQueryResponse queryResponse = alipayClient.execute(queryRequest);
-                if (queryResponse.isSuccess()) {
-                    String tradeStatus = queryResponse.getTradeStatus();
-                    if ("TRADE_SUCCESS".equals(tradeStatus) || "TRADE_FINISHED".equals(tradeStatus)) {
-                        throw new ServiceException(ResultCode.BAD_REQUEST, "该订单已完成支付，无法取消；如需撤销请在订单中发起退款。");
-                    }
-                    if ("TRADE_CLOSED".equals(tradeStatus)) {
-                        payingRecord.setStatus("CLOSED");
-                        paymentRecordService.updateById(payingRecord);
-                    } else {
-                        AlipayTradeCloseRequest closeRequest = new AlipayTradeCloseRequest();
-                        AlipayTradeCloseModel closeModel = new AlipayTradeCloseModel();
-                        closeModel.setOutTradeNo(payingRecord.getOutTradeNo());
-                        closeRequest.setBizModel(closeModel);
-                        
-                        AlipayTradeCloseResponse closeResponse = alipayClient.execute(closeRequest);
-                        if (!closeResponse.isSuccess()) {
-                            AlipayTradeQueryResponse queryResponse2 = alipayClient.execute(queryRequest);
-                            if (queryResponse2.isSuccess()) {
-                                String tradeStatus2 = queryResponse2.getTradeStatus();
-                                if ("TRADE_SUCCESS".equals(tradeStatus2) || "TRADE_FINISHED".equals(tradeStatus2)) {
-                                    throw new ServiceException(ResultCode.BAD_REQUEST, "该订单已完成支付，无法取消；如需撤销请在订单中发起退款。");
-                                }
-                                if ("TRADE_CLOSED".equals(tradeStatus2)) {
-                                    payingRecord.setStatus("CLOSED");
-                                    paymentRecordService.updateById(payingRecord);
-                                    closeResponse = null;
-                                }
-                            }
-                            if (closeResponse != null) {
-                                throw new ServiceException(ResultCode.ERROR, "支付宝关单失败: " + closeResponse.getSubMsg());
-                            }
-                        } else {
-                            payingRecord.setStatus("CLOSED");
-                            paymentRecordService.updateById(payingRecord);
-                        }
-                    }
-                } else {
-                    payingRecord.setStatus("CLOSED");
-                    paymentRecordService.updateById(payingRecord);
-                }
-            } catch (AlipayApiException e) {
-                throw new ServiceException(ResultCode.ERROR, "支付宝关单异常: " + e.getMessage());
-            }
+        if (payingRecord != null && Objects.equals(payingRecord.getStatus(), PaymentRecord.STATUS_PAYING)) {
+            closeAlipayTrade(payingRecord);
         }
 
+        // S6809: 通过代理调用，确保 @Transactional 生效
+        selfProvider.getObject().doCancelOrderInTransaction(order);
+    }
+
+    // S3776: 拆分高认知复杂度方法，消除 6 层嵌套
+    private void closeAlipayTrade(PaymentRecord payingRecord) {
+        try {
+            AlipayTradeQueryResponse queryResponse = queryAlipayTradeStatus(payingRecord.getOutTradeNo());
+            if (!queryResponse.isSuccess()) {
+                markRecordClosed(payingRecord);
+                return;
+            }
+            handleTradeStatusForClose(payingRecord, queryResponse.getTradeStatus());
+        } catch (AlipayApiException e) {
+            throw new ServiceException(ResultCode.ERROR, "支付宝关单异常: " + e.getMessage());
+        }
+    }
+
+    private AlipayTradeQueryResponse queryAlipayTradeStatus(String outTradeNo) throws AlipayApiException {
+        AlipayTradeQueryRequest request = new AlipayTradeQueryRequest();
+        AlipayTradeQueryModel model = new AlipayTradeQueryModel();
+        model.setOutTradeNo(outTradeNo);
+        request.setBizModel(model);
+        return getAlipayClient().execute(request);
+    }
+
+    private void handleTradeStatusForClose(PaymentRecord record, String tradeStatus) throws AlipayApiException {
+        if ("TRADE_SUCCESS".equals(tradeStatus) || "TRADE_FINISHED".equals(tradeStatus)) {
+            throw new ServiceException(ResultCode.BAD_REQUEST, "该订单已完成支付，无法取消；如需撤销请在订单中发起退款。");
+        }
+        if ("TRADE_CLOSED".equals(tradeStatus)) {
+            markRecordClosed(record);
+            return;
+        }
+        closeAlipayTradeAndRetry(record);
+    }
+
+    private void closeAlipayTradeAndRetry(PaymentRecord record) throws AlipayApiException {
+        AlipayTradeCloseRequest closeRequest = new AlipayTradeCloseRequest();
+        AlipayTradeCloseModel closeModel = new AlipayTradeCloseModel();
+        closeModel.setOutTradeNo(record.getOutTradeNo());
+        closeRequest.setBizModel(closeModel);
+
+        AlipayTradeCloseResponse closeResponse = getAlipayClient().execute(closeRequest);
+        if (closeResponse.isSuccess()) {
+            markRecordClosed(record);
+            return;
+        }
+        AlipayTradeQueryResponse requery = queryAlipayTradeStatus(record.getOutTradeNo());
+        if (requery.isSuccess()) {
+            handleTradeStatusForClose(record, requery.getTradeStatus());
+            return;
+        }
+        throw new ServiceException(ResultCode.ERROR, "支付宝关单失败: " + closeResponse.getSubMsg());
+    }
+
+    private void markRecordClosed(PaymentRecord record) {
+        record.setStatus(PaymentRecord.STATUS_CLOSED);
+        paymentRecordService.updateById(record);
+    }
+
+    // S2229: 显式声明传播行为，避免嵌套事务配置冲突
+    @Transactional(rollbackFor = Exception.class, propagation = Propagation.REQUIRES_NEW)
+    public void doCancelOrderInTransaction(Orders order) {
         List<OrderItem> items = orderItemService.lambdaQuery()
                 .eq(OrderItem::getOrderId, order.getId())
                 .list();
-        for (OrderItem item : items) {
-            Product product = productService.getById(item.getProductId());
-            if (product != null) {
-                product.setStock(product.getStock() + item.getQuantity());
-                productService.updateById(product);
+        if (!items.isEmpty()) {
+            Map<Long, Integer> restoreMap = items.stream()
+                    .collect(Collectors.toMap(OrderItem::getProductId, OrderItem::getQuantity, Integer::sum));
+            for (Map.Entry<Long, Integer> entry : restoreMap.entrySet()) {
+                productService.lambdaUpdate()
+                        .eq(Product::getId, entry.getKey())
+                        .setSql("stock = stock + " + entry.getValue())
+                        .update();
             }
         }
 
@@ -276,15 +336,21 @@ public class OrdersServiceImpl extends ServiceImpl<OrdersMapper, Orders>
         if (request == null || request.getOrderId() == null) {
             throw new ServiceException(ResultCode.BAD_REQUEST, "参数错误");
         }
-        Orders order = getUserOrder(userId, request.getOrderId());
-        if (!Objects.equals(order.getStatus(), 0)) {
-            throw new ServiceException(ResultCode.BAD_REQUEST, "订单状态不正确，无法支付");
+
+        String lockKey = "order:pay:" + request.getOrderId();
+        if (!distributedLock.tryLock(lockKey)) {
+            throw new ServiceException(ResultCode.BAD_REQUEST, "请勿重复提交");
         }
-        
-        // 模拟支付成功
-        order.setStatus(1);
-        // 如果有支付方式字段也可以在这里记录
-        updateById(order);
+        try {
+            Orders order = getUserOrder(userId, request.getOrderId());
+            if (!Objects.equals(order.getStatus(), 0)) {
+                throw new ServiceException(ResultCode.BAD_REQUEST, "订单状态不正确，无法支付");
+            }
+            order.setStatus(1);
+            updateById(order);
+        } finally {
+            distributedLock.unlock(lockKey);
+        }
     }
 
     @Override
@@ -333,47 +399,54 @@ public class OrdersServiceImpl extends ServiceImpl<OrdersMapper, Orders>
         order.setStatus(4); 
         updateById(order);
     }
+    @ReadOnly
     @Override
-    public List<MerchantOrderVO> listMerchantOrders(Long merchantId) {
+    public PageResult<MerchantOrderVO> listMerchantOrders(Long merchantId, int page, int pageSize) {
         // 1. 获取该商家的所有商品
         List<Product> products = productService.lambdaQuery()
                 .eq(Product::getMerchantId, merchantId)
                 .list();
         if (products.isEmpty()) {
-            return Collections.emptyList();
+            return new PageResult<>(Collections.emptyList(), 0, page, pageSize);
         }
-        List<Long> productIds = products.stream().map(Product::getId).collect(Collectors.toList());
+        List<Long> productIds = products.stream().map(Product::getId).toList();
 
         // 2. 获取包含这些商品的订单项
         List<OrderItem> orderItems = orderItemService.lambdaQuery()
                 .in(OrderItem::getProductId, productIds)
                 .list();
         if (orderItems.isEmpty()) {
-            return Collections.emptyList();
+            return new PageResult<>(Collections.emptyList(), 0, page, pageSize);
         }
-        
+
         // 3. 提取唯一的订单ID
         List<Long> orderIds = orderItems.stream()
                 .map(OrderItem::getOrderId)
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
 
-        // 4. 查询订单并映射为VO
-        List<Orders> orders = lambdaQuery()
+        // 4. 分页查询订单
+        Page<Orders> pageResult = lambdaQuery()
                 .in(Orders::getId, orderIds)
                 .orderByDesc(Orders::getCreateTime)
-                .list();
-                
+                .page(new Page<>(page, pageSize));
+
         // 获取订单与商品明细的映射关系
         Map<Long, List<OrderItem>> orderItemMap = orderItems.stream()
                 .collect(Collectors.groupingBy(OrderItem::getOrderId));
 
-        return orders.stream().map(order -> {
+        List<MerchantOrderVO> voList = pageResult.getRecords().stream().map(order -> {
             List<OrderItem> itemsForOrder = orderItemMap.getOrDefault(order.getId(), Collections.emptyList());
             MerchantOrderVO vo = copyMapper.toMerchantOrderVO(order, itemsForOrder);
             vo.setCreateTime(order.getCreateTime() == null ? null : order.getCreateTime().format(TIME_FORMATTER));
+            // 收货人手机号脱敏，防止商家批量获取买家手机号
+            if (vo.getReceiverPhone() != null && vo.getReceiverPhone().length() > 7) {
+                vo.setReceiverPhone(vo.getReceiverPhone().substring(0, 3) + "****" + vo.getReceiverPhone().substring(7));
+            }
             return vo;
-        }).collect(Collectors.toList());
+        }).toList();
+
+        return new PageResult<>(voList, pageResult.getTotal(), page, pageSize);
     }
 
     @Override
@@ -399,7 +472,7 @@ public class OrdersServiceImpl extends ServiceImpl<OrdersMapper, Orders>
             throw new ServiceException(ResultCode.NOT_FOUND, "订单数据异常");
         }
         
-        List<Long> productIds = items.stream().map(OrderItem::getProductId).collect(Collectors.toList());
+        List<Long> productIds = items.stream().map(OrderItem::getProductId).toList();
         long count = productService.lambdaQuery()
                 .in(Product::getId, productIds)
                 .eq(Product::getMerchantId, merchantId)
@@ -414,6 +487,7 @@ public class OrdersServiceImpl extends ServiceImpl<OrdersMapper, Orders>
         updateById(order);
     }
 
+    @ReadOnly
     @Override
     public OrderStatsVO getOrderStats(Long userId) {
         OrderStatsVO stats = OrderStatsVO.builder()
@@ -432,11 +506,13 @@ public class OrdersServiceImpl extends ServiceImpl<OrdersMapper, Orders>
         for (Map<String, Object> map : result) {
             Integer status = ((Number) map.get("status")).intValue();
             Integer count = ((Number) map.get("count")).intValue();
+            // S131: switch 必须包含 default 分支
             switch (status) {
                 case 0 -> stats.setUnpaid(count);
                 case 1 -> stats.setPacking(count);
                 case 2 -> stats.setDelivering(count);
-                case 3 -> stats.setReviewing(count); // 修复 Bug：待评价订单的状态为 3
+                case 3 -> stats.setReviewing(count);
+                default -> { }
             }
         }
         return stats;
@@ -508,18 +584,23 @@ public class OrdersServiceImpl extends ServiceImpl<OrdersMapper, Orders>
         return order;
     }
 
+    // S2140: 使用 AtomicInteger 替代 Math.random()，线程安全且可排序
+    private static final java.util.concurrent.atomic.AtomicInteger ORDER_SEQ = new java.util.concurrent.atomic.AtomicInteger(0);
+
     private String generateOrderNo(Long userId) {
-        return "T" + System.currentTimeMillis() + userId + (int) (Math.random() * 1000);
+        String timestamp = LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyyMMddHHmmss"));
+        String userPart = String.format("%04d", userId % 10000);
+        String seqPart = String.format("%04d", ORDER_SEQ.incrementAndGet() % 10000);
+        return "T" + timestamp + userPart + seqPart;
     }
 
     @Override
-    @Transactional(rollbackFor = Exception.class)
     public void approveRefund(Long merchantId, Long orderId) {
         Orders order = getMerchantOrder(merchantId, orderId);
-        if (!Objects.equals(order.getStatus(), 6)) { // 6为退款申请中
+        if (!Objects.equals(order.getStatus(), 6)) {
             throw new ServiceException(ResultCode.BAD_REQUEST, "订单状态不正确，无法同意退款");
         }
-        
+
         PaymentRecord record = null;
         if (order.getPaymentId() != null) {
             record = paymentRecordService.getById(order.getPaymentId());
@@ -530,19 +611,19 @@ public class OrdersServiceImpl extends ServiceImpl<OrdersMapper, Orders>
         if (record == null) {
             throw new ServiceException(ResultCode.BAD_REQUEST, "无有效支付记录，无法退款");
         }
-        
-        if (!Objects.equals(record.getStatus(), "PAID") && !Objects.equals(record.getStatus(), "REFUNDED")) {
+
+        if (!Objects.equals(record.getStatus(), PaymentRecord.STATUS_PAID) && !Objects.equals(record.getStatus(), PaymentRecord.STATUS_REFUNDED)) {
             throw new ServiceException(ResultCode.BAD_REQUEST, "支付记录状态异常，无法退款");
         }
-        
+
         BigDecimal refundAmount = record.getTotalAmount();
         if (refundAmount == null) {
             throw new ServiceException(ResultCode.BAD_REQUEST, "支付金额异常，无法退款");
         }
-        
-        if (!Objects.equals(record.getStatus(), "REFUNDED")) {
+
+        // 远程调用放在事务外
+        if (!Objects.equals(record.getStatus(), PaymentRecord.STATUS_REFUNDED)) {
             String outRequestNo = "refund_" + order.getId();
-            
             AlipayTradeRefundRequest refundRequest = new AlipayTradeRefundRequest();
             AlipayTradeRefundModel refundModel = new AlipayTradeRefundModel();
             refundModel.setOutTradeNo(record.getOutTradeNo());
@@ -550,21 +631,26 @@ public class OrdersServiceImpl extends ServiceImpl<OrdersMapper, Orders>
             refundModel.setOutRequestNo(outRequestNo);
             refundRequest.setBizModel(refundModel);
             try {
-                AlipayTradeRefundResponse refundResponse = alipayClient.execute(refundRequest);
+                AlipayTradeRefundResponse refundResponse = getAlipayClient().execute(refundRequest);
                 if (!refundResponse.isSuccess()) {
                     throw new ServiceException(ResultCode.ERROR, "支付宝退款失败: " + refundResponse.getSubMsg());
                 }
-                record.setStatus("REFUNDED");
+                record.setStatus(PaymentRecord.STATUS_REFUNDED);
                 paymentRecordService.updateById(record);
             } catch (AlipayApiException e) {
                 throw new ServiceException(ResultCode.ERROR, "支付宝退款异常: " + e.getMessage());
             }
         }
 
-        // 并发控制：使用带状态条件的 update
+        // 事务内只做数据库操作
+        doApproveRefundInTransaction(order);
+    }
+
+    @Transactional(rollbackFor = Exception.class)
+    public void doApproveRefundInTransaction(Orders order) {
         boolean updated = lambdaUpdate()
                 .set(Orders::getStatus, 7)
-                .set(Orders::getRefusalReason, null) // 清空可能的拒绝原因
+                .set(Orders::getRefusalReason, null)
                 .eq(Orders::getId, order.getId())
                 .eq(Orders::getStatus, 6)
                 .update();
@@ -620,7 +706,7 @@ public class OrdersServiceImpl extends ServiceImpl<OrdersMapper, Orders>
             throw new ServiceException(ResultCode.NOT_FOUND, "订单数据异常");
         }
         
-        List<Long> productIds = items.stream().map(OrderItem::getProductId).collect(Collectors.toList());
+        List<Long> productIds = items.stream().map(OrderItem::getProductId).toList();
         long count = productService.lambdaQuery()
                 .in(Product::getId, productIds)
                 .eq(Product::getMerchantId, merchantId)
